--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,8 @@
                 <div class="col l4 s12">
                     <h5 class="white-text center">About Us</h5>
                     <div class="divider"></div>
-                    <p class="white-text">Explore our collection of delicious recipe ideas including: Easy made recipes,
+                    <p class="white-text">
+                        Explore our collection of delicious recipe ideas including: Easy made recipes,
                         Vegan and Vegetarian ideas, Soup recipes, Salads and much more...
                     </p>
                     {% if not session.user %}
@@ -116,26 +117,26 @@
                     <div class="divider"></div>
                     <p class="grey-text text-lighten-4">Contact Us via phone or email:</p>
                     <p><i class="fas fa-phone-alt prefix"></i> +555-555555555</p>
-                    <p><i class="fas fa-at prefix"></i> info@cookbook.com</p>
+                    <p class="email-link"><i class="fas fa-at prefix"></i><a href = "mailto: info@cookbook.com" class="white-text">info@cookbook.com</a></p>
                 </div>
                 <div class="col l4 s12">
                     <h5 class="white-text center">Follow Us</h5>
                     <div class="divider"></div>
                     <ul class="follow-us-list">
                         <li>
-                            <a class="white-text" href="#!"><i class="fab fa-facebook-f"></i></a>
+                            <a class="white-text" target="_blank" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!"><i class="fab fa-twitter"></i></a>
+                            <a class="grey-text text-lighten-3" target="_blank" href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!"><i class="fab fa-google-plus-g"></i></a>
+                            <a class="grey-text text-lighten-3" target="_blank" href="https://www.google.com/account/about/?hl=lt"><i class="fab fa-google-plus-g"></i></a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!"><i class="fab fa-pinterest-p"></i></a>
+                            <a class="grey-text text-lighten-3" target="_blank" href="https://www.pinterest.ie/"><i class="fab fa-pinterest-p"></i></a>
                         </li>
                         <li>
-                            <a class="grey-text text-lighten-3" href="#!"><i class="fab fa-youtube"></i></a>
+                            <a class="grey-text text-lighten-3" target="_blank" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
                         </li>
                     </ul>
                 </div>
