--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     {% if session.user %}
-    <h2 class="header">Edit item</h2>
+    <h3 class="left-align section-hmargin"><span class="bolder-text-part red-text text-darken-1">Editing</span>
+        <span>{{item.product_name}}}</span></h3>
     <div class="row card-panel">
         <form class="" method="POST" action="{{ url_for('edit_item', item_id=item._id)}}">
             <div class="row">
@@ -23,7 +24,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-utensils red-text prefix"></i>
-                    <input id="product_image" name="product_image" type="text" value="{{ item.product_image}} class="validate" required>
+                    <input id="product_image" name="product_image" type="text" value="{{ item.product_image}}" class="validate" required>
                     <label for="product_image">Item Image URL</label>
                 </div>
             </div>
@@ -56,9 +57,9 @@
         </form>
     </div>
     {% else %}
-        <div>
-            <strong>You need to Log In</strong>
-        </div>
+    <div class="center-align valign-wrapper">
+        <h4 class="red-text">You Have To Be Logged-In To Perform This Task</h4>
+    </div>
     {% endif %}
 
 {% endblock %}
