--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
         <img class="responsive-img" src="../static/images/avatar-bg.png" alt="avatar-image"><br />
     </div>
     <div class="col s8 m9">
-        <h4 class="section-hmargin">Personal information</h4>
+        <h4 class="profile-hmargin">Personal information</h4>
         <p>Username : {{username.capitalize()}}
             {% if is_admin %}
             <span class="red-text">ADMIN</span>
@@ -32,7 +32,7 @@
             </div>
             <div class="row collapsible-body">
                 <div class="col s12 m3">
-                    <img class="responsive-img" src="{{ url_for('display_image', filename=recipe.recipe_image) }}"
+                    <img class="responsive-img" src="{{recipe.recipe_image}}"
                         alt="{{recipe.recipe_name}}">
                 </div>
                 <div class="col s12 m9">
@@ -43,22 +43,22 @@
                                 class="red waves-effect waves-light btn-red darken-1 btn-small"><i class="fas fa-edit"></i> EDIT</a>
                         </span>
                         <span>
-                            <a href="#modal1" class="btn-small waves-effect waves-light btn-red red darken-1 modal-trigger "><i
+                            <a href="#{{recipe}}" class="btn-small waves-effect waves-light btn-red red darken-1 modal-trigger "><i
                                     class="fas fa-times-circle"></i> DELETE</a>
                         </span>
                     </div>
                 </div>
             </div>
         </li>
-        <div id="modal1" class="modal">
+        <div id="{{recipe}}" class="modal">
             <div class="modal-content">
-                <h4>Modal Header</h4>
-                <p>A bunch of text</p>
+                <h5>Are you sure you want to delete "{{recipe.recipe_name}}"?</h5>
+                <p>This item will be deleted immediately. You can not undo this action.</p>
             </div>
             <div class="modal-footer">
                 <a href="{{ url_for('delete_recipe', recipe_id=recipe._id)}}"
-                    class="modal-close waves-effect waves-green btn-flat">Yes remove this Item</a>
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat">No</a>
+                class="modal-close waves-effect waves-light btn-red red darken-1 btn-small">Yes, Delete It</a>
+                <a href="#!" class="modal-close waves-effect waves-light btn-red green darken-1 btn-small">No</a>
             </div>
         </div>
         {% endfor %}
@@ -88,22 +88,22 @@
                                 class="btn-small waves-effect waves-light btn-red red darken-1"><i class="fas fa-edit"></i> Edit</a>
                         </span>
                         <span>
-                            <a href="#modal1" class="btn-small waves-effect waves-light btn-red red darken-1 modal-trigger "><i
+                            <a href="#{{item}}" class="btn-small waves-effect waves-light btn-red red darken-1 modal-trigger "><i
                                     class="fas fa-times-circle"></i> Delete</a>
                         </span>
                     </div>
                 </div>
             </div>
         </li>
-        <div id="modal1" class="modal">
+        <div id="{{item}}" class="modal">
             <div class="modal-content">
-                <h4>Modal Header</h4>
-                <p>A bunch of text</p>
+                <h5>Are you sure you want to delete "{{item.product_name}}"?</h5>
+                <p>This item will be deleted immediately. You can not undo this action.</p>
             </div>
             <div class="modal-footer">
                 <a href="{{ url_for('delete_item', item_id=item._id)}}"
-                    class="modal-close waves-effect waves-green btn-flat">Yes remove this Item</a>
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat">No</a>
+                    class="modal-close waves-effect waves-light btn-red red darken-1 btn-small">Yes, Delete It</a>
+                    <a href="#!" class="modal-close waves-effect waves-light btn-red green darken-1 btn-small">No</a>
             </div>
         </div>
 
